Complete model tests